version/0.12/_sources/api/solver/_autosummary/settings/global_dt_pseudo_relax.rst.txt
:orphan:

.. _global_dt_pseudo_relax:

global_dt_pseudo_relax
======================

.. currentmodule:: ansys.fluent.core.solver.settings_231.global_dt_pseudo_relax

.. autoclass:: global_dt_pseudo_relax
    :show-inheritance:
    :undoc-members:
.. rubric:: Named object type

:ref:`axis_direction_child <axis_direction_child>`


.. rubric:: Included in:

======================================================================================   ===================================================

Parent                                                                                                                               Summary

======================================================================================   ===================================================
:ref:`pseudo_time_explicit_relaxation_factor <pseudo_time_explicit_relaxation_factor>`       'pseudo_time_explicit_relaxation_factor' child.

======================================================================================   ===================================================

