version/0.16/_sources/api/solver/_autosummary/settings/global_dt_pseudo_relax.rst.txt
:orphan:

.. _global_dt_pseudo_relax:

global_dt_pseudo_relax
======================

.. autoclass:: ansys.fluent.core.solver.settings_232.global_dt_pseudo_relax.global_dt_pseudo_relax
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`axis_direction_child <axis_direction_child>`


.. rubric:: Included in:

======================================================================================   ===================================================

Parent                                                                                                                               Summary

======================================================================================   ===================================================
:ref:`pseudo_time_explicit_relaxation_factor <pseudo_time_explicit_relaxation_factor>`       'pseudo_time_explicit_relaxation_factor' child.

======================================================================================   ===================================================

